--- a/web24empleadosjson.html
+++ b/web24empleadosjson.html
@@ -58,7 +58,8 @@
 
                     $("#listaDeptos").append(list);
                     $(list).append(enlace);
-
+                    
+                    //o tambien enlace.click(function(){})
                     $("#empleados"+index).click(function(){
                         var numDepto = $("#empleados"+index).data("ndepto");
                         console.log(numDepto);
