--- a/web26paginaboostrap.html
+++ b/web26paginaboostrap.html
@@ -19,6 +19,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="web29empleadosboostrap.html">Empleados <span class="sr-only">(current)</span></a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Features</a>
             </li>
